build out methods & fix result graphs

--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -2278,6 +2278,22 @@
   urldate = {2024-10-13}
 }
 
+@article{rayedDeepLearningMedical2024,
+  title = {Deep Learning for Medical Image Segmentation: {{State-of-the-art}} Advancements and Challenges},
+  shorttitle = {Deep Learning for Medical Image Segmentation},
+  author = {Rayed, Md. Eshmam and Islam, S.M. Sajibul and Niha, Sadia Islam and Jim, Jamin Rahman and Kabir, Md Mohsin and Mridha, M.F.},
+  date = {2024},
+  journaltitle = {Informatics in Medicine Unlocked},
+  shortjournal = {Informatics in Medicine Unlocked},
+  volume = {47},
+  pages = {101504},
+  issn = {23529148},
+  doi = {10.1016/j.imu.2024.101504},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S2352914824000601},
+  urldate = {2024-10-18},
+  langid = {english}
+}
+
 @article{redenteApplicationspecificApproachesMicroCT2023,
   title = {Application-Specific Approaches to {{MicroCT}} for Evaluation of Mouse Models of Pulmonary Disease},
   author = {Redente, Elizabeth F. and Kopf, Katrina W. and Bahadur, Ali N. and Robichaud, Annette and Lundblad, Lennart K. and McDonald, Lindsay T.},
