--- a/includes/shared-preamble-acronyms.tex
+++ b/includes/shared-preamble-acronyms.tex
@@ -10,6 +10,7 @@
 \newacronym{fn}{FN}{False Negative}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{dc}{DSC}{Dice similarity coefficient}
+\newacronym{hd}{HD}{Hausdorff distance}
 \newacronym{ram}{RAM}{Random Access Memory}
 \newacronym{mct}{\mct}{Microscopic computed tomography}
 \newacronym{gb}{GB}{Gigabyte}
@@ -40,6 +41,8 @@
 \newacronym{cnn}{CNN}{convolutional neural network}
 \newacronym{dcnn}{DCNN}{deep convolutional neural network}
 \newacronym{ai}{AI}{artificial intelligence}
+\newacronym{csv}{CSV}{Comma-separated value}
+\newacronym{mrb}{MRB}{Medical Reality Modeling Language bundle}
 
 % glossaries
 % usage:
