--- a/includes/thesis/masterthesis-vars.sty
+++ b/includes/thesis/masterthesis-vars.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{masterthesis-vars}[2024/01/08 Master Thesis Variables]
 
-\title{Development and evaluation\\of a bone anatomy segmentation guide\\for micro-CT in mice}
+\title{Development and evaluation \\of a bone anatomy segmentation guide \\for micro-CT in mice}
 \author{Stefan Rohrbacher, BSc}
 \newcommand{\matriculationNumber}{01607307}
 \newcommand{\thesiskeywords}{3DSlicer, micro-CT, Segmentation}
@@ -17,7 +17,7 @@
 \newcommand{\mct}{micro-CT}
 \newcommand{\diatx}{Di\'{a}taxis}
 \newcommand{\good}{The Good Docs Project}
-
+\newcommand{\noTesters}{seven testers}
 
 %\newcommand{\tb}{TextBlob}
 %\newcommand{\nb}{\ac{NB}}
